<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBaseline_toBaselineOf="parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/newbackground"
        android:gravity="fill_vertical"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="403dp"
            android:layout_height="118dp"
            android:layout_gravity="center"
            android:contentDescription="@string/DecriptionLogo"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="425dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/computer"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:filterTouchesWhenObscured="true"
                android:gravity="center"
                android:text="@string/computer"
                android:textStyle="bold"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/user"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:autoText="false"
                android:gravity="center_horizontal"
                android:text="@string/user"
                android:textStyle="italic"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="381dp"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Left_dice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/Dice"
                app:srcCompat="@drawable/dice3" />

            <ImageView
                android:id="@+id/Right_dice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/Dice"
                app:srcCompat="@drawable/dice4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/roll_button"
                android:layout_width="98dp"
                android:layout_height="36dp"
                android:layout_gravity="center|top"
                android:background="@drawable/newbackground"
                android:text="@string/higher" />

            <Button
                android:id="@+id/lower_button"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/lower" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_gravity="center_horizontal"
                android:autoText="true"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:shadowColor="#FFFFFF"
                app:autoSizeTextType="uniform" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>